[project]
name = "hexlet-python-package"
version = "0.3.0"
description = "A modern Python package template"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "skip"}
]
keywords = ["python", "package", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8.1"
dependencies = []

[project.urls]
Homepage = "https://github.com/AABur/python-package"
Repository = "https://github.com/AABur/python-package"

[project.scripts]
hexlet-python-package = "hexlet_python_package.scripts.hexlet_python_package:main"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
